--- a/iOS/issue-tracker/issue-tracker/Base.lproj/Main.storyboard
+++ b/iOS/issue-tracker/issue-tracker/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ztH-lY-X3Y">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ztH-lY-X3Y">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -37,21 +37,36 @@
             </objects>
             <point key="canvasLocation" x="-632" y="238"/>
         </scene>
-        <!--이슈-->
+        <!--Issue List View Controller-->
         <scene sceneID="f3p-9R-hjs">
             <objects>
-                <viewController id="oTI-da-eDR" sceneMemberID="viewController">
+                <viewController id="oTI-da-eDR" customClass="IssueListViewController" customModule="issue_tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="e9G-As-1Ly">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="200" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oU9-yx-qTd">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="y9l-Qc-QqU"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="oU9-yx-qTd" firstAttribute="leading" secondItem="y9l-Qc-QqU" secondAttribute="leading" id="5GG-x3-eF8"/>
+                            <constraint firstItem="oU9-yx-qTd" firstAttribute="top" secondItem="y9l-Qc-QqU" secondAttribute="top" id="68q-pE-jgZ"/>
+                            <constraint firstItem="y9l-Qc-QqU" firstAttribute="trailing" secondItem="oU9-yx-qTd" secondAttribute="trailing" id="FKS-7O-uGe"/>
+                            <constraint firstItem="y9l-Qc-QqU" firstAttribute="bottom" secondItem="oU9-yx-qTd" secondAttribute="bottom" id="gAn-Xe-pob"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="이슈" image="exclamationmark.circle" catalog="system" id="goh-EH-LxE"/>
+                    <navigationItem key="navigationItem" id="U4K-1F-xyh"/>
+                    <connections>
+                        <outlet property="issueTableView" destination="oU9-yx-qTd" id="eMI-5k-3kH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="elB-mf-Nih" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="249" y="793"/>
+            <point key="canvasLocation" x="228.98550724637684" y="1516.7410714285713"/>
         </scene>
         <!--레이블-->
         <scene sceneID="SuD-oH-C9C">
@@ -82,7 +97,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IGg-E4-hvo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1019" y="793"/>
+            <point key="canvasLocation" x="1109" y="793"/>
         </scene>
         <!--내게정-->
         <scene sceneID="CPO-fU-AJO">
@@ -98,7 +113,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vTy-kJ-ZF8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3072" y="793"/>
+            <point key="canvasLocation" x="2862.3188405797105" y="792.85714285714278"/>
         </scene>
         <!--Milestone View Controller-->
         <scene sceneID="f18-5Z-nm8">
@@ -114,7 +129,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1rW-Zv-Ixr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2417" y="793"/>
+            <point key="canvasLocation" x="2002.8985507246377" y="1516.7410714285713"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="pYl-ZN-vsk">
@@ -127,7 +142,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="oTI-da-eDR" kind="relationship" relationship="viewControllers" id="Fb5-vw-YJJ"/>
+                        <segue destination="Qvp-6m-CSb" kind="relationship" relationship="viewControllers" id="Fb5-vw-YJJ"/>
                         <segue destination="dsf-nF-ec5" kind="relationship" relationship="viewControllers" id="U3N-hc-L3l"/>
                         <segue destination="g0q-18-mPP" kind="relationship" relationship="viewControllers" id="DK5-w3-R3k"/>
                         <segue destination="cxD-Kl-bEy" kind="relationship" relationship="viewControllers" id="HpJ-9s-VRl"/>
@@ -154,7 +169,26 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f25-i6-ILh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1737.68115942029" y="792.85714285714278"/>
+            <point key="canvasLocation" x="2004" y="793"/>
+        </scene>
+        <!--이슈-->
+        <scene sceneID="MEh-c2-Sua">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Qvp-6m-CSb" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="이슈" image="exclamationmark.circle" catalog="system" id="goh-EH-LxE"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xdp-e7-356">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="oTI-da-eDR" kind="relationship" relationship="rootViewController" id="zCG-iI-jnM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QwI-Yz-8CA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="228.98550724637684" y="792.85714285714278"/>
         </scene>
     </scenes>
     <resources>
